--- a/src/app/about/About.css
+++ b/src/app/about/About.css
@@ -6,7 +6,7 @@
   
   .fade-in-delay {
     animation: fadeIn 1s ease-in;
-    animation-delay: 0.5s;
+    /* animation-delay: 0.5s; */
   }
   
   @keyframes fadeIn {
